  unix installations where timidity is normally needed.

* DLS: a few changes from vavoom svn repository to fix loading of drums
  and somewhat improve the dls instruments use. still not good enough.

* renamed macro FSCALE to TIM_FSCALE to avoid possible clashes with
  system headers. renamed FSCALENEG to TIM_FSCALENEG for consistency.

* build: changed DEBUG to TIMIDITY_DEBUG for DEBUG_MSG. made to compile
  cleanly using newer gcc versions, as well as clang. made it to compile
  using C++ compilers.

------------------------------------------------------------------------

Changes by libtimidity-0.1.0:
-----------------------------

This version of TiMidity should contain all the fixes from the
November 15 2004 SDL_sound Subversion snapshot. In addition, I've made some
changes of my own, e.g.:

* Replacing SDL types and endian-handling with owns.

* File access to the config file and instruments is done through
  stdio functions. File access to MIDI files is done through abstract
  input stream. Implemented functions to create input stream from
  file name, from stdio file pointer, from memory, from callback functions.

* Renamed interface functions
  Timidity_Init            -> mid_init
  Timidity_Init_NoConfig   -> mid_init_no_config
  Timidity_SetVolume       -> mid_song_set_volume
  Timidity_PlaySome        -> mid_song_read_wave
  Timidity_LoadDLS         -> mid_dlspatches_load
  Timidity_FreeDLS         -> mid_dlspatches_free
  Timidity_LoadDLSSong     -> mid_song_load_dls
  Timidity_LoadSong        -> mid_song_load
  Timidity_Start           -> mid_song_start
  Timidity_Seek            -> mid_song_seek
  Timidity_GetSongLength   -> mid_song_get_total_time
  Timidity_FreeSong        -> mid_song_free

* Most structures and macro definition made hidden and placed in
  timidity_internal.h.

* Results of mid_song_read_wave (Timidity_PlaySome) not
  depends with internal sample buffer size.

* mid_init can accept timidity config file name.
